# sankee

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Pipfile  README.md  examples.ipynb  postBuild  pyproject.toml  readthedocs.yml  setup.py
.git-hooks/: pre-commit
.github/workflows/: ci.yml  coverage.yml  publish.yaml  test.yml
docs/: conf.py  examples.rst  index.rst  requirements.txt  sankee.rst
docs/_static/: MODIS.html  NDVI.html
docs/examples/: custom_landsat_ndvi.ipynb  modis_snow_and_ice.ipynb  themes.ipynb
examples/: MODIS.html  NLCD.html  example_snow_and_ice.ipynb
geevis/: __init__.py  datasets.py  label.py  lulc.py  palette.py  utils.py
sankee/: __init__.py  core.py  datasets.py  example_data.py  plotting.py  sampling.py  themes.py  utils.py
scripts/: build.bash  install-hooks.bash  run-tests.bash
tests/: conftest.py  data.py  test.py  test_datasets.py  test_plotting.py  test_sampling.py  test_utils.py
